COUNTER APP, used selector for state management and getting store data

--- a/src/app/counter/custom-counter-input/custom-counter-input.component.html
+++ b/src/app/counter/custom-counter-input/custom-counter-input.component.html
@@ -1,4 +1,8 @@
 <div>
+    <div class="my-3">{{channelName$ | async}}</div>
     <input type="text" placeholder=" ENTER VALUE" [(ngModel)]="value"/>
     <button class="btn btn-primary" (click)="onAdd()">Add to counter !</button>
+</div>
+<div class="my-4">
+    <button (click)="onChangeChannelName()">Change Channel</button>
 </div>
